combined.yaml
- apiVersion: v1
  kind: Namespace
  metadata:
    name: socialservice
  spec:
    finalizers:
      - kubernetes
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: socialservice
    namespace: socialservice
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: socialservice
    template:
      metadata:
        labels:
          app: socialservice
      spec:
        nodeSelector:
          kubernetes.io/os: linux
        containers:
          - name: socialservice
            image: nginx:1.14.2
            ports:
              - containerPort: 80
            resources:
              requests:
                cpu: '0'
                memory: '0'
              limits:
                cpu: '256'
                memory: 11400G
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    name: autoscaler
    namespace: socialservice
  spec:
    scaleTargetRef:
      apiVersion: apps/v1
      kind: Deployment
      name: socialservice
    minReplicas: 2
    maxReplicas: 6
    targetCPUUtilizationPercentage: 75
- apiVersion: v1
  kind: Service
  metadata:
    name: socialservice-service
    namespace: socialservice
  spec:
    type: LoadBalancer
    ports:
      - targetPort: 80
        name: port80
        port: 80
        protocol: TCP
    selector:
      app: socialservice
